# prominence-finder

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b00de47ad7e2e13a637d9aa605dec95e.html  dir_e7b4a179cab00564929ca6f1392dd132.html  doxygen_config  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  menudata.js
.qt/: QtDeploySupport.cmake
d0/dd6/: classIsland.html
d1/d18/: structdatasetMetadata.html
d1/d46/: visualizeTif_8hpp.html  visualizeTif_8hpp_source.html
d2/ddd/: structTransformer-members.html
d3/d86/: classIsland-members.html
d4/d25/: neighbors_8cpp.html
d4/d73/: csv__util_8cpp.html
d4/d86/: structKeyColInfo.html
d4/db1/: structKeyColInfo-members.html
d5/d38/: calculateProminence_8cpp.html
d6/d3d/: structCoords.html
d6/d82/: findPeaks_8cpp.html
d8/d43/: structPoint.html
d8/d70/: processKeyCol_8cpp.html
da/db2/: getIslandIfExists_8cpp.html
da/de4/: structCompareIsland.html
data/: .gitattributes  two_pyramids.tif
db/dca/: initializeMatrix_8cpp.html
dc/de0/: visualizeTif_8cpp.html
dd/d21/: structCompareIsland-members.html
results/: peak_count_buckets.csv  peak_isolation.csv
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+23 more)
src/: main.cpp
src/computation/: CMakeLists.txt  calculateProminence.cpp  csv_util.cpp  debug.cpp  findPeaks.cpp  gdal_computation.hpp  getIslandIfExists.cpp  initializeMatrix.cpp  neighbors.cpp  pixelToLatLong.cpp  printMetaData.cpp  processKeyCol.cpp
(+10 files in other folders)
